--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -1,7 +1,7 @@
-/* Navbar container */
+
 .navbar {
   width: 100%;
-  background: #fff8dc; /* light gold */
+  background: #fff8dc; 
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
@@ -12,7 +12,7 @@
 .navbar-container {
   max-width: 1200px;
   margin: auto;
-  padding: 12px 20px 20px 20px;
+  padding: 12px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
